force-app/main/default/objects/Seat_Allocation_by_Agency__c/Seat_Allocation_by_Agency__c.object-meta.xml
<CustomObject>
    <label>Seat Allocation by Agency</label>
    <nameField>
        <displayFormat>SA{YYYY}{MM}{00000000}</displayFormat>
        <label>Seat Allocation by Agency No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seat Allocation by Agencies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>