force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/Allocated_Seats__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Seats__c</fullName>
    <label>Allocated Seats</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>