force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/Cross_Day_Flight_Returning__c.field-meta.xml
<CustomField>
    <fullName>Cross_Day_Flight_Returning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cross Day Flight(Returning)</label>
    <type>Checkbox</type>
</CustomField>