force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/RBD_Departing__c.field-meta.xml
<CustomField>
    <fullName>RBD_Departing__c</fullName>
    <defaultValue>&quot;G&quot;</defaultValue>
    <label>RBD Departing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RBD</valueSetName>
    </valueSet>
</CustomField>