force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/Returning_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Returning_Flight_Number__c</fullName>
    <label>Returning Flight Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>