force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Route</valueSetName>
    </valueSet>
</CustomField>