force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run</label>
    <type>Checkbox</type>
</CustomField>