force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/Travel_Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agency_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Travel Agency ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Seat Allocation by Agencies</relationshipLabel>
    <relationshipName>Seat_Allocation_by_Agencies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>