force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/WK_Fri__c.field-meta.xml
<CustomField>
    <fullName>WK_Fri__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WK_Fri</label>
    <type>Checkbox</type>
</CustomField>