force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/WK_Mon__c.field-meta.xml
<CustomField>
    <fullName>WK_Mon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WK_Mon</label>
    <type>Checkbox</type>
</CustomField>