force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/WK_Sat__c.field-meta.xml
<CustomField>
    <fullName>WK_Sat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WK_Sat</label>
    <type>Checkbox</type>
</CustomField>