force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/WK_Sun__c.field-meta.xml
<CustomField>
    <fullName>WK_Sun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WK_Sun</label>
    <type>Checkbox</type>
</CustomField>