force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/WK_Thu__c.field-meta.xml
<CustomField>
    <fullName>WK_Thu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WK_Thu</label>
    <type>Checkbox</type>
</CustomField>