force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/WK_Tue__c.field-meta.xml
<CustomField>
    <fullName>WK_Tue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WK_Tue</label>
    <type>Checkbox</type>
</CustomField>