force-app/main/default/objects/Seat_Allocation_by_Agency__c/fields/WK_Wed__c.field-meta.xml
<CustomField>
    <fullName>WK_Wed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WK_Wed</label>
    <type>Checkbox</type>
</CustomField>