force-app/main/default/objects/Seat_Allocation_by_Agency__c/recordTypes/Seat_Allocation_by_Agency.recordType-meta.xml
<RecordType>
    <fullName>Seat_Allocation_by_Agency</fullName>
    <active>true</active>
    <label>Seat Allocation by Agency</label>
</RecordType>