force-app/main/default/objects/Seat_Allocation_by_Agency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Travel_Agency_ID__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Departing_Flight_Number__c</columns>
    <columns>Returning_Flight_Number__c</columns>
    <columns>Allocation_Type__c</columns>
    <columns>Allocated_Seats__c</columns>
    <columns>Route__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Processed__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>